--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,1 +1,8 @@
-<div id="map"></div>
+<div id="map">
+  <div class="distance" *ngIf="distanceToTreasure$ | async as distance">
+    <span>
+      Afstand: {{ distance }} m
+    </span>
+  </div>
+</div>
+
