--- a/src/app/components/treasure/treasure.component.html
+++ b/src/app/components/treasure/treasure.component.html
@@ -1,1 +1,12 @@
-<p>treasure works!</p>
+<div class="container">
+  <div class="letter">
+    <h1>{{ letter$ | async }}</h1>
+  </div>
+  <div class="image"></div>
+  <button (click)="onNextTreasure()">
+    <span>
+      Næete
+    </span>
+    <img src="assets/treasure.png">
+  </button>
+</div>
