--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-map></app-map>
 <app-treasure *ngIf="store.showTreasure$ | async"></app-treasure>
+<app-summery *ngIf="store.showSummery$ | async"></app-summery>
