--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -5,16 +5,21 @@
   .distance {
     position: absolute;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.531);
+    background-color: rgba(0, 0, 0, 0.8);
     height: 56px;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    border-radius: 0 0 30px 30px;
 
     span {
-      font-size: x-large;
       color: white;
+      font-size: x-large;
+    }
+
+    h2 {
+      color: rgb(255, 135, 135)
     }
   }
 }
