--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,11 @@ html, body {
 }
 
 .mapboxgl-ctrl-group button, .maplibregl-ctrl-group button {
-  height: 45px;
-  width: 45px;
+  height: 56px;
+  width: 56px;
 }
 
+.mapboxgl-ctrl-group, .maplibregl-ctrl-group {
+  background-color: rgb(255 255 255 / 90%);
+  border-radius: 50%;
+}
