--- a/src/app/components/treasure/treasure.component.scss
+++ b/src/app/components/treasure/treasure.component.scss
@@ -7,21 +7,28 @@
   z-index: 2;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  // justify-content: space-around;
   align-items: center;
 
-  h1 {
-    color: white;
-    text-transform: uppercase;
-    font-size: 15em;
-    margin: 0;
+  .letter {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+
+    h1 {
+      color: white;
+      text-transform: uppercase;
+      font-size: 15em;
+      margin: 0;
+    }
   }
 
 
 
   button {
-    width: 90%;
+    width: calc(100% - 40px);
     height: 100px;
+    margin: 20px;
     font-size: x-large;
     color: white;
     background-color: tomato;
