--- a/src/app/components/treasure/treasure.component.html
+++ b/src/app/components/treasure/treasure.component.html
@@ -6,7 +6,7 @@
     <span>
       Næste
     </span>
-    <img src="assets/treasure.png">
+    <img src="assets/treasure_33.png">
   </button>
   <button (click)="onShowSummery()" *ngIf="lastTreasure$ | async">
     <span>
