--- a/src/app/components/summery/summery.component.scss
+++ b/src/app/components/summery/summery.component.scss
@@ -3,14 +3,55 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
 
-  h1 {
-    color: white;
+  header {
+    width: 100%;
+    height: 80px;
+    background-color: tomato;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    h1 {
+      margin: 0;
+      color: white;
+    }
+
+    .close-summery {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      color: white;
+
+      span {
+        font-family: monospace;
+        font-size: x-large;
+      }
+    }
+
   }
+
+  .treasures {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    span {
+      width: 50%;
+      color: white;
+      text-transform: uppercase;
+      font-size: 8rem;
+    }
+
+  }
+
 }
