--- a/src/app/components/treasure/treasure.component.scss
+++ b/src/app/components/treasure/treasure.component.scss
@@ -23,8 +23,6 @@
     }
   }
 
-
-
   button {
     width: calc(100% - 40px);
     height: 100px;
@@ -41,6 +39,7 @@
 
     span {
       margin-right: 30px;
+      font-size: xx-large;
     }
 
     img {
