--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,9 +17,9 @@ html, body {
   display: block;
   border: none;
   padding: 0;
-  background-image: url('assets/treasure.png');
-  width: 28px;
-  height: 40px;
+  background-image: url('assets/treasure_33.png');
+  width: 33px;
+  height: 33px;
 }
 
 .mapboxgl-ctrl-group button, .maplibregl-ctrl-group button {
