--- a/src/app/components/summery/summery.component.html
+++ b/src/app/components/summery/summery.component.html
@@ -5,7 +5,7 @@
       <span>X</span>
     </div>
   </header>
-  <ng-container *ngIf="store.treasures$ | async as treasures">
+  <ng-container *ngIf="(store.selectedRoute$ | async)?.treasures as treasures">
     <div class="treasures">
       <span *ngFor="let treasure of treasures">{{treasure.properties.bogstav}}</span>
     </div>
