--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -1,33 +1,58 @@
 .container {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 10px;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 2;
-  overflow-x: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 
-  .card {
+  header {
     width: 100%;
-    min-height: 80px;
-    margin-bottom: 15px;
+    height: 80px;
+    background-color: #454545;
     display: flex;
     align-items: center;
-    border-radius: 20px;
-
-    img {
-      height: 60px;
-      margin-left: 20px;
-    }
+    justify-content: center;
 
     h1 {
       margin: 0;
       color: white;
-      width: 100%;
-      text-align: center;
     }
-
   }
+
+  .routes {
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-x: auto;
+    padding: 10px;
+
+    .card {
+      width: 100%;
+      min-height: 80px;
+      margin-bottom: 15px;
+      display: flex;
+      align-items: center;
+      border-radius: 20px;
+
+      img {
+        height: 60px;
+        margin-left: 20px;
+      }
+
+      h1 {
+        margin: 0;
+        color: white;
+        width: 100%;
+        text-align: center;
+      }
+
+    }
+  }
+
 
 }
