--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,29 @@ html, body {
   margin: 0;
 }
 
+// width
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+// Track
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 6px;
+}
+
+// Handle
+::-webkit-scrollbar-thumb {
+  background: tomato;
+  border-radius: 6px;
+}
+
+// Handle on hover
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
+// Map icon
 .treasure-map-icon {
   display: block;
   border: none;
