--- a/src/app/components/summery/summery.component.scss
+++ b/src/app/components/summery/summery.component.scss
@@ -13,7 +13,7 @@
   header {
     width: 100%;
     height: 80px;
-    background-color: tomato;
+    background-color: rgb(65, 149, 158);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,15 +42,21 @@
     flex-grow: 1;
     display: flex;
     flex-wrap: wrap;
-    overflow-x: auto;
+    overflow: auto;
 
     span {
-      width: 50%;
+      width: calc(50% - 16px);
       color: white;
       text-transform: uppercase;
       font-size: 8rem;
       text-align: center;
-      border: 1px solid white;
+      border: 4px solid rgb(255, 255, 255);
+      margin: 8px;
+      background-color: rgb(49 49 49);
+      border-radius: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
   }
