--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,15 @@ html, body {
   height: 33px;
 }
 
+.pirate-map-icon {
+  display: block;
+  border: none;
+  padding: 0;
+  background-image: url('assets/pirate.png');
+  width: 100px;
+  height: 75px;
+}
+
 .mapboxgl-ctrl-group button, .maplibregl-ctrl-group button {
   height: 56px;
   width: 56px;
