--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,9 +49,9 @@ html, body {
   display: block;
   border: none;
   padding: 0;
-  background-image: url('assets/pirate.png');
-  width: 40px;
-  height: 72px;
+  background-image: url('assets/pirate.gif');
+  width: 59px;
+  height: 87px;
 }
 
 .mapboxgl-ctrl-group button, .maplibregl-ctrl-group button {
