fix letter font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~maplibre-gl/dist/maplibre-gl.css";
-@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Satisfy&display=swap');
 
 * {
   box-sizing: border-box;
