--- a/src/app/components/summery/summery.component.scss
+++ b/src/app/components/summery/summery.component.scss
@@ -46,13 +46,13 @@
 
     span {
       width: calc(50% - 16px);
+      font-family: 'Fredericka the Great', cursive;
       color: white;
       text-transform: uppercase;
       font-size: 8rem;
       text-align: center;
       border: 4px solid rgb(255, 255, 255);
       margin: 8px;
-      background-color: rgb(49 49 49);
       border-radius: 30px;
       display: flex;
       align-items: center;
