--- a/src/app/components/treasure/treasure.component.scss
+++ b/src/app/components/treasure/treasure.component.scss
@@ -17,12 +17,13 @@
 
     h1 {
       color: white;
+      font-family: 'Fredericka the Great', cursive;
       text-transform: uppercase;
       font-size: 15em;
       margin: 0;
       padding: 50px;
       border-radius: 100px;
-      box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
+      box-shadow: rgb(85, 91, 255) 0px 0px 0px 6px, rgb(31, 193, 27) 0px 0px 0px 12px, rgb(255, 217, 19) 0px 0px 0px 18px, rgb(255, 156, 85) 0px 0px 0px 24px, rgb(255, 85, 85) 0px 0px 0px 30px;
     }
   }
 
